--- a/index.html
+++ b/index.html
@@ -30,18 +30,6 @@
 
       <section>
         <h2>Opportunity Index</h2>
-<p>The <a href="http://kirwaninstitute.osu.edu/reports/2009/11_2009_CTOppMapping_FullReport.pdf">Opportunity Index</a> uses 10 variables; seven of these can be retrieved from the Census Bureau&#39;s American Community Survey:</p>
-
-<ul>
-<li><a href="http://factfinder2.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_11_5YR_B23006">Educational attainment for the population</a> (college and associates degrees)</li>
-<li><a href="http://factfinder2.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_12_5YR_B23025">Unemployment rates</a> (percent in labor force but unemployed)</li>
-<li><a href="http://factfinder2.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_11_5YR_B19058">Population on public assistance</a></li>
-<li><a href="http://factfinder2.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_12_5YR_B08135">Mean commute time</a> (average time to commute for residents, using the method outlined <a href="http://quickfacts.census.gov/qfd/meta/long_LFE305212.htm">here</a>)</li>
-<li><a href="http://factfinder2.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_12_5YR_B25002">Vacancy rate</a> (percent vacant housing)</li>
-<li><a href="http://factfinder2.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_12_5YR_B17017">Poverty</a> (percent below poverty line)</li>
-<li><a href="http://factfinder2.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_12_5YR_B25008">Home ownership rate</a> (percent of owner-occupied homes in given housing stock)</li>
-</ul>
-
 <h3>Census data for neighborhoods</h3>
 
 <p>For &#39;neighborhood&#39; data, the index uses census tracts which restricts the data source to the ACS 5-year estimates. I used the <a href="http://cran.r-project.org/web/packages/acs/index.html">acs.R package</a> to download census data by tract for the entire state for each of these seven variables. The most recent set of 5-year estimates spans 2008 - 2012, but the script could be updated for different years as new data becomes available.</p>
@@ -132,7 +120,7 @@
 
 <h3>What is driving the Opportunity Index?</h3>
 
-<p>With a composite index of z-scores, it helps to see if specific variables are playing more of a role in determining the final index values. The OECD guide to composite indicators notes that using z-scores means that &quot;indicators with extreme values thus have a greater effect on the composite indicator.&quot; That can be an issue in a state with a high degree of inequality and concentration of poverty. </p>
+<p>With a composite index of z-scores, it helps to see if specific variables are playing more of a role in determining the final index values. The <a href="http://www.oecd.org/std/42495745.pdf">OECD guide to composite indicators</a> notes that using z-scores means that &#39;indicators with extreme values thus have a greater effect on the composite indicator.&#39; That can be an issue in a state with a high degree of inequality and concentration of poverty. </p>
 
 <p>As a start, we know that many of the variables are correlated with each other - the correlation matrix below shows that several of the variables - poverty, public assistance, etc. - are correlated with each other. Job growth has almost no correlation with any of the variables. </p>
 
