--- a/index.html
+++ b/index.html
@@ -10,14 +10,8 @@
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-        <link rel=stylesheet href="libraries/widgets/nvd3/css/nv.d3.css"></link>
-<link rel=stylesheet href="libraries/widgets/nvd3/css/rNVD3.css"></link>
-
-    <script src="libraries/widgets/nvd3/js/jquery-1.8.2.min.js"></script>
-<script src="libraries/widgets/nvd3/js/d3.v3.min.js"></script>
-<script src="libraries/widgets/nvd3/js/nv.d3.min-new.js"></script>
-<script src="libraries/widgets/nvd3/js/fisheye.js"></script>
-
+        
+    
   </head>
   <body>
     <div class="wrapper">
@@ -82,7 +76,7 @@
 
 <p><img src="assets/fig/unnamed-chunk-9.png" alt="plot of chunk unnamed-chunk-9"> </p>
 
-<h3>What is driving the Opportunity Index?</h3>
+<h3>What is driving the Opportunity Index</h3>
 
 <!-- html table generated in R 3.0.2 by xtable 1.7-3 package -->
 
