add link to csv file

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
       <section>
         <h2>Opportunity Index</h2>
+<p>If you just want to download the data, you can get it <a href="https://github.com/sgaul/opportunity/blob/gh-pages/oppdata.csv">here</a>.</p>
+
 <p>The <a href="http://kirwaninstitute.osu.edu/reports/2009/11_2009_CTOppMapping_FullReport.pdf">Opportunity Index</a> uses 10 variables; seven of these can be retrieved from the Census Bureau&#39;s American Community Survey:</p>
 
 <ul>
