--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <section>
         <h2>Opportunity Index</h2>
-<p>The following presents the methodology and indicators for the Connecticut opportunity analysis. To download the data, go <a href="https://github.com/sgaul/opportunity/blob/gh-pages/oppdata.csv">here</a>.</p>
+<p>The following presents the methodology and indicators for the Connecticut opportunity analysis. To download the data, go <a href="https://github.com/sgaul/opportunity/blob/gh-pages/oppdata.csv">here</a>. For more on the use of Opportunity Mapping in Connecticut, see the <a href="http://www.ctoca.org/opportunity_in_connecticut">Open Communities Alliance</a> website.</p>
 
 <h3>What is opportunity?</h3>
 
@@ -44,7 +44,9 @@
 
 <p>The comprehensive opportunity map represents the combined score based on these three sub-areas. </p>
 
-<p>The <a href="http://kirwaninstitute.osu.edu/reports/2009/11_2009_CTOppMapping_FullReport.pdf">Opportunity Index</a> for Connecticut uses 11 variables. Seven of these can be retrieved from the Census Bureau&#39;s American Community Survey, the remainder are extracted from national and local public databases: </p>
+<p>The 2009 Opportunity Index for Connecticut was created by the Kirwan Institute and the CT Fair Housing Center, and was based on 10 variables from public data sources; details can be found in appendix B and C <a href="http://kirwaninstitute.osu.edu/reports/2009/11_2009_CTOppMapping_FullReport.pdf">here</a>.</p>
+
+<p>This updated 2014 Opportunity Index for Connecticut was created by the <a href="http://www.ctoca.org/">CT Open Communities Alliance</a> and contributors, and is based on 11 variables from similar public data sources, as described below. </p>
 
 <ul>
 <li><a href="http://factfinder2.census.gov/faces/tableservices/jsf/pages/productview.xhtml?pid=ACS_11_5YR_B23006">Educational attainment for the population</a> (college and associates degrees)</li>
@@ -96,17 +98,32 @@
 
 <!-- html table generated in R 3.0.2 by xtable 1.7-4 package -->
 
-<!-- Sat Jan 24 16:31:34 2015 -->
+<!-- Fri Feb 06 07:41:44 2015 -->
 
 <table border=1>
-<tr> <th>  </th> <th>    college </th> <th> publicassistance </th> <th>    poverty </th> <th>  unemployment </th> <th> owneroccupied </th> <th>    vacancy </th> <th> employment_access_index </th> <th> job_diversity_index </th> <th>   jobchange </th> <th> Total.Mathematics.Avg.Scale.Score </th> <th> Total.Reading.Average.Scale.Score </th>  </tr>
-  <tr> <td align="right"> 1 </td> <td> Min.   :0.142   </td> <td> Min.   :0.202   </td> <td> Min.   :0.000   </td> <td> Min.   :0.615   </td> <td> Min.   :0.000   </td> <td> Min.   :0.000   </td> <td> Min.   :  3928   </td> <td> Min.   :1719   </td> <td> Min.   :-0.367   </td> <td> Min.   :212   </td> <td> Min.   :208   </td> </tr>
-  <tr> <td align="right"> 2 </td> <td> 1st Qu.:0.518   </td> <td> 1st Qu.:0.850   </td> <td> 1st Qu.:0.860   </td> <td> 1st Qu.:0.890   </td> <td> 1st Qu.:0.526   </td> <td> 1st Qu.:0.885   </td> <td> 1st Qu.: 11162   </td> <td> 1st Qu.:2219   </td> <td> 1st Qu.:-0.011   </td> <td> 1st Qu.:239   </td> <td> 1st Qu.:228   </td> </tr>
-  <tr> <td align="right"> 3 </td> <td> Median :0.666   </td> <td> Median :0.944   </td> <td> Median :0.936   </td> <td> Median :0.926   </td> <td> Median :0.793   </td> <td> Median :0.930   </td> <td> Median : 19149   </td> <td> Median :2349   </td> <td> Median : 0.013   </td> <td> Median :255   </td> <td> Median :240   </td> </tr>
-  <tr> <td align="right"> 4 </td> <td> Mean   :0.646   </td> <td> Mean   :0.884   </td> <td> Mean   :0.890   </td> <td> Mean   :0.910   </td> <td> Mean   :0.692   </td> <td> Mean   :0.912   </td> <td> Mean   : 23248   </td> <td> Mean   :2468   </td> <td> Mean   : 0.012   </td> <td> Mean   :254   </td> <td> Mean   :241   </td> </tr>
-  <tr> <td align="right"> 5 </td> <td> 3rd Qu.:0.780   </td> <td> 3rd Qu.:0.974   </td> <td> 3rd Qu.:0.967   </td> <td> 3rd Qu.:0.945   </td> <td> 3rd Qu.:0.907   </td> <td> 3rd Qu.:0.959   </td> <td> 3rd Qu.: 29170   </td> <td> 3rd Qu.:2567   </td> <td> 3rd Qu.: 0.034   </td> <td> 3rd Qu.:271   </td> <td> 3rd Qu.:257   </td> </tr>
-  <tr> <td align="right"> 6 </td> <td> Max.   :1.000   </td> <td> Max.   :1.000   </td> <td> Max.   :1.000   </td> <td> Max.   :1.000   </td> <td> Max.   :1.000   </td> <td> Max.   :1.000   </td> <td> Max.   :113840   </td> <td> Max.   :5053   </td> <td> Max.   : 0.858   </td> <td> Max.   :298   </td> <td> Max.   :279   </td> </tr>
-  <tr> <td align="right"> 7 </td> <td> NA's   :6   </td> <td> NA's   :8   </td> <td> NA's   :8   </td> <td> NA's   :8   </td> <td> NA's   :8   </td> <td> NA's   :7   </td> <td> NA's   :6   </td> <td> NA's   :6   </td> <td> NA's   :6   </td> <td> NA's   :7   </td> <td> NA's   :8   </td> </tr>
+<tr> <th> % adults with college degree </th> <th> % not receiving public assistance </th> <th> % not in poverty </th> <th>   % employed </th> <th> % living in owner-occupied housing </th> <th> % housing that is not vacant </th> <th> Employment access index </th>  </tr>
+  <tr> <td> Min.   :0.142   </td> <td> Min.   :0.202   </td> <td> Min.   :0.000   </td> <td> Min.   :0.615   </td> <td> Min.   :0.000   </td> <td> Min.   :0.000   </td> <td> Min.   :  3928   </td> </tr>
+  <tr> <td> 1st Qu.:0.518   </td> <td> 1st Qu.:0.850   </td> <td> 1st Qu.:0.860   </td> <td> 1st Qu.:0.890   </td> <td> 1st Qu.:0.526   </td> <td> 1st Qu.:0.885   </td> <td> 1st Qu.: 11162   </td> </tr>
+  <tr> <td> Median :0.666   </td> <td> Median :0.944   </td> <td> Median :0.936   </td> <td> Median :0.926   </td> <td> Median :0.793   </td> <td> Median :0.930   </td> <td> Median : 19149   </td> </tr>
+  <tr> <td> Mean   :0.646   </td> <td> Mean   :0.884   </td> <td> Mean   :0.890   </td> <td> Mean   :0.910   </td> <td> Mean   :0.692   </td> <td> Mean   :0.912   </td> <td> Mean   : 23248   </td> </tr>
+  <tr> <td> 3rd Qu.:0.780   </td> <td> 3rd Qu.:0.974   </td> <td> 3rd Qu.:0.967   </td> <td> 3rd Qu.:0.945   </td> <td> 3rd Qu.:0.907   </td> <td> 3rd Qu.:0.959   </td> <td> 3rd Qu.: 29170   </td> </tr>
+  <tr> <td> Max.   :1.000   </td> <td> Max.   :1.000   </td> <td> Max.   :1.000   </td> <td> Max.   :1.000   </td> <td> Max.   :1.000   </td> <td> Max.   :1.000   </td> <td> Max.   :113840   </td> </tr>
+  <tr> <td> NA's   :6   </td> <td> NA's   :8   </td> <td> NA's   :8   </td> <td> NA's   :8   </td> <td> NA's   :8   </td> <td> NA's   :7   </td> <td> NA's   :6   </td> </tr>
+   </table>
+
+<!-- html table generated in R 3.0.2 by xtable 1.7-4 package -->
+
+<!-- Fri Feb 06 07:41:44 2015 -->
+
+<table border=1>
+<tr> <th> Job diversity index </th> <th> % change in jobs (2009-12) </th> <th> 3rd grade math, avg. scale scores </th> <th> 3rd grade reading, avg. scale scores </th>  </tr>
+  <tr> <td> Min.   :1719   </td> <td> Min.   :-0.367   </td> <td> Min.   :212   </td> <td> Min.   :208   </td> </tr>
+  <tr> <td> 1st Qu.:2219   </td> <td> 1st Qu.:-0.011   </td> <td> 1st Qu.:239   </td> <td> 1st Qu.:228   </td> </tr>
+  <tr> <td> Median :2349   </td> <td> Median : 0.013   </td> <td> Median :255   </td> <td> Median :240   </td> </tr>
+  <tr> <td> Mean   :2468   </td> <td> Mean   : 0.012   </td> <td> Mean   :254   </td> <td> Mean   :241   </td> </tr>
+  <tr> <td> 3rd Qu.:2567   </td> <td> 3rd Qu.: 0.034   </td> <td> 3rd Qu.:271   </td> <td> 3rd Qu.:257   </td> </tr>
+  <tr> <td> Max.   :5053   </td> <td> Max.   : 0.858   </td> <td> Max.   :298   </td> <td> Max.   :279   </td> </tr>
+  <tr> <td> NA's   :6   </td> <td> NA's   :6   </td> <td> NA's   :7   </td> <td> NA's   :8   </td> </tr>
    </table>
 
 <p>To visualize the results for each of the variables, we can map each for the state. Several variables - like poverty, public assistance, unemployment - show similar patterns across tracts, while job growth and commute times are less similar. In each case, the darker shades of purple highlight areas doing &#39;better&#39; on that variable. </p>
@@ -166,22 +183,21 @@ If the variables have different distributions, then the z-scores will have diffe
 
 <!-- html table generated in R 3.0.2 by xtable 1.7-4 package -->
 
-<!-- Fri Jan 30 16:29:09 2015 -->
+<!-- Fri Feb 06 07:43:16 2015 -->
 
 <table border=1>
-<tr> <th>  </th> <th> college </th> <th> publicassistance </th> <th> poverty </th> <th> unemployment </th> <th> owneroccupied </th> <th> vacancy </th> <th> employment_access_index </th> <th> job_diversity_index </th> <th> jobchange </th> <th> Total.Mathematics.Avg.Scale.Score </th> <th> Total.Reading.Average.Scale.Score </th> <th> index </th>  </tr>
-  <tr> <td align="right"> college </td> <td align="right"> 1.00 </td> <td align="right"> 0.77 </td> <td align="right"> 0.65 </td> <td align="right"> 0.69 </td> <td align="right"> 0.66 </td> <td align="right"> 0.30 </td> <td align="right"> -0.34 </td> <td align="right"> -0.23 </td> <td align="right"> 0.05 </td> <td align="right"> 0.69 </td> <td align="right"> 0.70 </td> <td align="right"> 0.84 </td> </tr>
-  <tr> <td align="right"> publicassistance </td> <td align="right"> 0.77 </td> <td align="right"> 1.00 </td> <td align="right"> 0.88 </td> <td align="right"> 0.80 </td> <td align="right"> 0.81 </td> <td align="right"> 0.45 </td> <td align="right"> -0.60 </td> <td align="right"> -0.29 </td> <td align="right"> 0.02 </td> <td align="right"> 0.66 </td> <td align="right"> 0.64 </td> <td align="right"> 0.89 </td> </tr>
-  <tr> <td align="right"> poverty </td> <td align="right"> 0.65 </td> <td align="right"> 0.88 </td> <td align="right"> 1.00 </td> <td align="right"> 0.73 </td> <td align="right"> 0.84 </td> <td align="right"> 0.56 </td> <td align="right"> -0.63 </td> <td align="right"> -0.35 </td> <td align="right"> 0.02 </td> <td align="right"> 0.64 </td> <td align="right"> 0.62 </td> <td align="right"> 0.85 </td> </tr>
-  <tr> <td align="right"> unemployment </td> <td align="right"> 0.69 </td> <td align="right"> 0.80 </td> <td align="right"> 0.73 </td> <td align="right"> 1.00 </td> <td align="right"> 0.66 </td> <td align="right"> 0.35 </td> <td align="right"> -0.52 </td> <td align="right"> -0.20 </td> <td align="right"> -0.03 </td> <td align="right"> 0.54 </td> <td align="right"> 0.53 </td> <td align="right"> 0.79 </td> </tr>
-  <tr> <td align="right"> owneroccupied </td> <td align="right"> 0.66 </td> <td align="right"> 0.81 </td> <td align="right"> 0.84 </td> <td align="right"> 0.66 </td> <td align="right"> 1.00 </td> <td align="right"> 0.49 </td> <td align="right"> -0.65 </td> <td align="right"> -0.35 </td> <td align="right"> -0.00 </td> <td align="right"> 0.66 </td> <td align="right"> 0.64 </td> <td align="right"> 0.81 </td> </tr>
-  <tr> <td align="right"> vacancy </td> <td align="right"> 0.30 </td> <td align="right"> 0.45 </td> <td align="right"> 0.56 </td> <td align="right"> 0.35 </td> <td align="right"> 0.49 </td> <td align="right"> 1.00 </td> <td align="right"> -0.24 </td> <td align="right"> -0.27 </td> <td align="right"> -0.02 </td> <td align="right"> 0.32 </td> <td align="right"> 0.29 </td> <td align="right"> 0.57 </td> </tr>
-  <tr> <td align="right"> employment_access_index </td> <td align="right"> -0.34 </td> <td align="right"> -0.60 </td> <td align="right"> -0.63 </td> <td align="right"> -0.52 </td> <td align="right"> -0.65 </td> <td align="right"> -0.24 </td> <td align="right"> 1.00 </td> <td align="right"> 0.15 </td> <td align="right"> 0.09 </td> <td align="right"> -0.48 </td> <td align="right"> -0.46 </td> <td align="right"> -0.44 </td> </tr>
-  <tr> <td align="right"> job_diversity_index </td> <td align="right"> -0.23 </td> <td align="right"> -0.29 </td> <td align="right"> -0.35 </td> <td align="right"> -0.20 </td> <td align="right"> -0.35 </td> <td align="right"> -0.27 </td> <td align="right"> 0.15 </td> <td align="right"> 1.00 </td> <td align="right"> -0.05 </td> <td align="right"> -0.37 </td> <td align="right"> -0.36 </td> <td align="right"> -0.19 </td> </tr>
-  <tr> <td align="right"> jobchange </td> <td align="right"> 0.05 </td> <td align="right"> 0.02 </td> <td align="right"> 0.02 </td> <td align="right"> -0.03 </td> <td align="right"> -0.00 </td> <td align="right"> -0.02 </td> <td align="right"> 0.09 </td> <td align="right"> -0.05 </td> <td align="right"> 1.00 </td> <td align="right"> 0.03 </td> <td align="right"> 0.05 </td> <td align="right"> 0.22 </td> </tr>
-  <tr> <td align="right"> Total.Mathematics.Avg.Scale.Score </td> <td align="right"> 0.69 </td> <td align="right"> 0.66 </td> <td align="right"> 0.64 </td> <td align="right"> 0.54 </td> <td align="right"> 0.66 </td> <td align="right"> 0.32 </td> <td align="right"> -0.48 </td> <td align="right"> -0.37 </td> <td align="right"> 0.03 </td> <td align="right"> 1.00 </td> <td align="right"> 0.96 </td> <td align="right"> 0.73 </td> </tr>
-  <tr> <td align="right"> Total.Reading.Average.Scale.Score </td> <td align="right"> 0.70 </td> <td align="right"> 0.64 </td> <td align="right"> 0.62 </td> <td align="right"> 0.53 </td> <td align="right"> 0.64 </td> <td align="right"> 0.29 </td> <td align="right"> -0.46 </td> <td align="right"> -0.36 </td> <td align="right"> 0.05 </td> <td align="right"> 0.96 </td> <td align="right"> 1.00 </td> <td align="right"> 0.71 </td> </tr>
-  <tr> <td align="right"> index </td> <td align="right"> 0.84 </td> <td align="right"> 0.89 </td> <td align="right"> 0.85 </td> <td align="right"> 0.79 </td> <td align="right"> 0.81 </td> <td align="right"> 0.57 </td> <td align="right"> -0.44 </td> <td align="right"> -0.19 </td> <td align="right"> 0.22 </td> <td align="right"> 0.73 </td> <td align="right"> 0.71 </td> <td align="right"> 1.00 </td> </tr>
+<tr> <th>  </th> <th> % adults with college degree </th> <th> % not receiving public assistance </th> <th> % not in poverty </th> <th> % employed </th> <th> % living in owner-occupied housing </th> <th> % housing that is not vacant </th> <th> Employment access index </th> <th> Job diversity index </th> <th> % change in jobs (2009-12) </th> <th> 3rd grade math, avg. scale scores </th> <th> 3rd grade reading, avg. scale scores </th>  </tr>
+  <tr> <td align="right"> % adults with college degree </td> <td align="right"> 1.00 </td> <td align="right"> 0.77 </td> <td align="right"> 0.65 </td> <td align="right"> 0.69 </td> <td align="right"> 0.66 </td> <td align="right"> 0.30 </td> <td align="right"> -0.34 </td> <td align="right"> -0.23 </td> <td align="right"> 0.05 </td> <td align="right"> 0.69 </td> <td align="right"> 0.70 </td> </tr>
+  <tr> <td align="right"> % not receiving public assistance </td> <td align="right"> 0.77 </td> <td align="right"> 1.00 </td> <td align="right"> 0.88 </td> <td align="right"> 0.80 </td> <td align="right"> 0.81 </td> <td align="right"> 0.45 </td> <td align="right"> -0.60 </td> <td align="right"> -0.29 </td> <td align="right"> 0.02 </td> <td align="right"> 0.66 </td> <td align="right"> 0.64 </td> </tr>
+  <tr> <td align="right"> % not in poverty </td> <td align="right"> 0.65 </td> <td align="right"> 0.88 </td> <td align="right"> 1.00 </td> <td align="right"> 0.73 </td> <td align="right"> 0.84 </td> <td align="right"> 0.56 </td> <td align="right"> -0.63 </td> <td align="right"> -0.35 </td> <td align="right"> 0.02 </td> <td align="right"> 0.64 </td> <td align="right"> 0.62 </td> </tr>
+  <tr> <td align="right"> % employed </td> <td align="right"> 0.69 </td> <td align="right"> 0.80 </td> <td align="right"> 0.73 </td> <td align="right"> 1.00 </td> <td align="right"> 0.66 </td> <td align="right"> 0.35 </td> <td align="right"> -0.52 </td> <td align="right"> -0.20 </td> <td align="right"> -0.03 </td> <td align="right"> 0.54 </td> <td align="right"> 0.53 </td> </tr>
+  <tr> <td align="right"> % living in owner-occupied housing </td> <td align="right"> 0.66 </td> <td align="right"> 0.81 </td> <td align="right"> 0.84 </td> <td align="right"> 0.66 </td> <td align="right"> 1.00 </td> <td align="right"> 0.49 </td> <td align="right"> -0.65 </td> <td align="right"> -0.35 </td> <td align="right"> -0.00 </td> <td align="right"> 0.66 </td> <td align="right"> 0.64 </td> </tr>
+  <tr> <td align="right"> % housing that is not vacant </td> <td align="right"> 0.30 </td> <td align="right"> 0.45 </td> <td align="right"> 0.56 </td> <td align="right"> 0.35 </td> <td align="right"> 0.49 </td> <td align="right"> 1.00 </td> <td align="right"> -0.24 </td> <td align="right"> -0.27 </td> <td align="right"> -0.02 </td> <td align="right"> 0.32 </td> <td align="right"> 0.29 </td> </tr>
+  <tr> <td align="right"> Employment access index </td> <td align="right"> -0.34 </td> <td align="right"> -0.60 </td> <td align="right"> -0.63 </td> <td align="right"> -0.52 </td> <td align="right"> -0.65 </td> <td align="right"> -0.24 </td> <td align="right"> 1.00 </td> <td align="right"> 0.15 </td> <td align="right"> 0.09 </td> <td align="right"> -0.48 </td> <td align="right"> -0.46 </td> </tr>
+  <tr> <td align="right"> Job diversity index </td> <td align="right"> -0.23 </td> <td align="right"> -0.29 </td> <td align="right"> -0.35 </td> <td align="right"> -0.20 </td> <td align="right"> -0.35 </td> <td align="right"> -0.27 </td> <td align="right"> 0.15 </td> <td align="right"> 1.00 </td> <td align="right"> -0.05 </td> <td align="right"> -0.37 </td> <td align="right"> -0.36 </td> </tr>
+  <tr> <td align="right"> % change in jobs (2009-12) </td> <td align="right"> 0.05 </td> <td align="right"> 0.02 </td> <td align="right"> 0.02 </td> <td align="right"> -0.03 </td> <td align="right"> -0.00 </td> <td align="right"> -0.02 </td> <td align="right"> 0.09 </td> <td align="right"> -0.05 </td> <td align="right"> 1.00 </td> <td align="right"> 0.03 </td> <td align="right"> 0.05 </td> </tr>
+  <tr> <td align="right"> 3rd grade math, avg. scale scores </td> <td align="right"> 0.69 </td> <td align="right"> 0.66 </td> <td align="right"> 0.64 </td> <td align="right"> 0.54 </td> <td align="right"> 0.66 </td> <td align="right"> 0.32 </td> <td align="right"> -0.48 </td> <td align="right"> -0.37 </td> <td align="right"> 0.03 </td> <td align="right"> 1.00 </td> <td align="right"> 0.96 </td> </tr>
+  <tr> <td align="right"> 3rd grade reading, avg. scale scores </td> <td align="right"> 0.70 </td> <td align="right"> 0.64 </td> <td align="right"> 0.62 </td> <td align="right"> 0.53 </td> <td align="right"> 0.64 </td> <td align="right"> 0.29 </td> <td align="right"> -0.46 </td> <td align="right"> -0.36 </td> <td align="right"> 0.05 </td> <td align="right"> 0.96 </td> <td align="right"> 1.00 </td> </tr>
    </table>
 
 <p>Principal components analysis is another way to see the key factors that determine the final index. A principal components analysis of the index data shows that the first principal component dominates the results - explaining 56 percent of the overall variance in the data (first bar in the graph, first column in the table). </p>
