Edits to text from Lisa

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
 <p>The comprehensive opportunity map represents the combined score based on these three sub-areas. </p>
 
-<p>The 2009 Opportunity Index for Connecticut was created by the Kirwan Institute working in partnership with the CT Fair Housing Center, and was based on 10 variables from public data sources; details can be found in appendix B and C <a href="http://kirwaninstitute.osu.edu/reports/2009/11_2009_CTOppMapping_FullReport.pdf">here</a>.</p>
+<p>The 2009 Opportunity Index for Connecticut was created by the Kirwan Institute working in partnership with the CT Fair Housing Center, and was based on 11 variables from public data sources; details can be found in appendix B and C <a href="http://kirwaninstitute.osu.edu/reports/2009/11_2009_CTOppMapping_FullReport.pdf">here</a>.</p>
 
-<p>This updated 2014 Opportunity Index for Connecticut was created by the <a href="http://www.ctoca.org/">CT Open Communities Alliance</a> and contributors, and is based on 12 variables from similar public data sources, as described below. </p>
+<p>This updated 2014 Opportunity Index for Connecticut was created by the <a href="http://www.ctoca.org/">CT Open Communities Alliance</a> and contributors as a joint project with the <a href="http://kirwaninstitute.osu.edu/">Kirwan Institute</a> and the <a href="http://www.ctfairhousing.org/">Connecticut Fair Housing Center</a>, and is based on 12 variables from similar public data sources, as described below.</p>
 
 <ul>
 <li>Educational indicators
